--- a/client/styl.css
+++ b/client/styl.css
@@ -40,7 +40,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     padding: 20px;
     max-width: 1000px;
     margin: 0 auto;
@@ -71,7 +71,6 @@ button:hover {
     background-color: #0056b3;
 }
 
-
 table {
     border: 1px solid black;
     border-collapse: collapse;
@@ -82,4 +81,25 @@ th, td {
     border: 1px solid black;
     padding: 10px;
     text-align: center;
+}
+
+details {
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    padding: 0.5em 0.5em 0;
+}
+
+summary {
+    font-weight: bold;
+    margin: -0.5em -0.5em 0;
+    padding: 0.5em;
+}
+
+details[open] {
+    padding: 0.5em;
+}
+
+details[open] summary {
+    border-bottom: 1px solid #aaa;
+    margin-bottom: 0.5em;
 }
