--- a/client/styl.css
+++ b/client/styl.css
@@ -103,3 +103,7 @@ details[open] summary {
     border-bottom: 1px solid #aaa;
     margin-bottom: 0.5em;
 }
+a{
+    text-decoration: none;
+    color: white;
+}
